# MyCam

./: CMakeLists.txt  README.md
Core/: TrackingSystem.cpp  TrackingSystem.h  define.h  main.cpp
Detection/: BackgroundSubtraction.cpp  BackgroundSubtraction.h  Detector.cpp  Detector.h  DetectorDecorator.h  DetectorFactory.h  MLDetector.cpp  MLDetector.h  MLMotionDetector.cpp  MLMotionDetector.h  MotionDetector.cpp  MotionDetector.h
Tracking/: Kalman.cpp  Kalman.h  Track.cpp  Track.h  Tracker.cpp  Tracker.h
Utils/: Buff.h  VideoProcessing.cpp  VideoProcessing.h
include/: BackgroundSubtract.h  Detector.h  HungarianAlg.h  Kalman.h  MLDetector.h  MotionDetector.h  Track.h  Tracker.h  TrackingSystem.h  define.h
src/: BackgroundSubtract.cpp  Detector.cpp  Kalman.cpp  MLDetector.cpp  MotionDetector.cpp  Track.cpp  Tracker.cpp  TrackingSystem.cpp  main.cpp
